--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,27 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es6"
-        // "baseUrl": "./src"
+        "target": "es6",
+        "module": "esnext",
+        "checkJs": true,
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "strict": false,
+        "forceConsistentCasingInFileNames": true,
+        "noEmit": true,
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "jsx": "preserve",
+        "incremental": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./*"],
+            "@/components/*": ["components/*"],
+            "@/models/*": ["models/*"]
+        }
     },
-    "include": ["../clone-twitter/**/*"]
+    "include": ["**/*.js", "**/*.jsx"],
+    "exclude": ["node_modules"]
 }
